# ipb

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  SECURITY.md
apps/: CMakeLists.txt
apps/ipb-bridge/: CMakeLists.txt
apps/ipb-bridge/config/: ipb-bridge.yaml.example
apps/ipb-bridge/include/: bridge.hpp  getopt_compat.hpp
apps/ipb-bridge/src/: bridge.cpp  config.cpp  main.cpp
apps/ipb-gate/: CMakeLists.txt
apps/ipb-gate/include/ipb/gate/: config_loader.hpp  daemon_utils.hpp  orchestrator.hpp  signal_handler.hpp
apps/ipb-gate/src/: config_loader.cpp  daemon_utils.cpp  main.cpp  orchestrator.cpp  signal_handler.cpp
benchmarks/: CMakeLists.txt
benchmarks/benchmarks/results/: benchmark_dev_20251212_224726.csv  benchmark_dev_20251212_224726.json  benchmark_dev_20251213_062238.csv  benchmark_dev_20251213_062238.json
benchmarks/include/ipb/benchmarks/: benchmark_framework.hpp
benchmarks/src/: benchmarks_core.hpp  benchmarks_scoops.hpp  benchmarks_sinks.hpp  benchmarks_transports.hpp  main.cpp
core/: CMakeLists.txt
core/common/: CMakeLists.txt
core/common/benchmarks/: CMakeLists.txt  performance_benchmarks.hpp  run_benchmarks.cpp
core/common/cmake/: ipb-common-config.cmake.in  ipb-common.pc.in
core/common/examples/: CMakeLists.txt  basic_data_point_example.cpp
core/common/include/ipb/common/: backpressure.hpp  cache_optimized.hpp  cached_pattern_matcher.hpp  data_point.hpp  dataset.hpp  debug.hpp  endpoint.hpp  error.hpp  fixed_string.hpp  interfaces.hpp  lockfree_queue.hpp  lockfree_task_queue.hpp  memory_config.hpp  memory_pool.hpp  metrics.hpp  platform.hpp  protocol_capabilities.hpp  rate_limiter.hpp  realtime_optimizations.hpp  registry.hpp  result_ext.hpp  structured_logger.hpp  tracing.hpp
core/common/src/: data_point.cpp  dataset.cpp  debug.cpp  endpoint.cpp  error.cpp  interfaces.cpp  memory_pool.cpp  platform.cpp  rt_primitives.cpp  structured_logger.cpp
core/common/tests/: CMakeLists.txt  test_data_point.cpp
core/components/: CMakeLists.txt
core/components/src/config/: config_loader.cpp  config_loader_embedded.cpp
core/components/src/message_bus/: channel.cpp  message_bus.cpp
core/components/src/rule_engine/: compiled_pattern_cache.cpp  pattern_matcher.cpp  rule_engine.cpp
core/components/src/scheduler/: edf_scheduler.cpp  task_queue.cpp
core/components/src/scoop_registry/: scoop_registry.cpp
core/components/src/sink_registry/: load_balancer.cpp  sink_registry.cpp
core/components/tests/: CMakeLists.txt  test_pattern_matching.cpp
core/router/: CMakeLists.txt
core/router/cmake/: ipb-router.pc.in
core/router/include/ipb/router/: router.hpp
core/router/src/: router.cpp
core/security/: CMakeLists.txt
core/security/include/ipb/security/: audit.hpp  security.hpp  (+4 more)
core/security/src/: tls_openssl.cpp
core/transform/: CMakeLists.txt
core/transform/src/: compression.cpp  encoding.cpp  encryption.cpp  integrity.cpp
core/transform/tests/: CMakeLists.txt  transform_test.cpp
examples/: CMakeLists.txt  complete_industrial_setup.cpp  gateway-config.yaml  mock_data_flow_test.cpp
ipb-gate/: CMakeLists.txt
ipb-gate/include/ipb/gate/: config_loader.hpp  orchestrator.hpp  signal_handler.hpp
ipb-gate/src/: config_loader.cpp  daemon_utils.cpp  main.cpp  orchestrator.cpp  signal_handler.cpp
libipb-adapter-modbus/: CMakeLists.txt
libipb-adapter-modbus/src/: modbus_adapter.cpp
libipb-common/tests/: CMakeLists.txt  test_data_point.cpp
libipb-scoop-console/: CMakeLists.txt
libipb-scoop-modbus/: CMakeLists.txt
libipb-scoop-modbus/src/: modbus_scoop.cpp
libipb-sink-console/: CMakeLists.txt
libipb-sink-console/cmake/: ipb-sink-console-config.cmake.in
libipb-sink-console/src/: console_sink.cpp
libipb-sink-syslog/: CMakeLists.txt
libipb-sink-syslog/examples/: CMakeLists.txt  basic_syslog_example.cpp
libipb-sink-syslog/src/: syslog_sink.cpp
libipb-transport-mqtt/: CMakeLists.txt
libipb-transport-mqtt/src/: mqtt_connection.cpp
libipb-transport-mqtt/src/backends/: coremqtt_backend.cpp  paho_backend.cpp
scoops/console/: CMakeLists.txt
scoops/console/cmake/: libipb-scoop-console-config.cmake.in
scoops/console/src/: console_scoop.cpp
scoops/console/tests/: CMakeLists.txt  test_console_scoop.cpp
scoops/modbus/: CMakeLists.txt
scoops/modbus/cmake/: libipb-scoop-modbus-config.cmake.in
scoops/modbus/src/: modbus_scoop.cpp
scoops/mqtt/: CMakeLists.txt
scoops/mqtt/cmake/: ipb-scoop-mqtt-config.cmake.in
scoops/mqtt/src/: mqtt_scoop.cpp
scoops/sparkplug/: CMakeLists.txt
scoops/sparkplug/src/: sparkplug_payload.cpp  sparkplug_scoop.cpp  sparkplug_topic.cpp
sinks/console/: CMakeLists.txt
sinks/console/src/: console_sink.cpp
sinks/console/tests/: CMakeLists.txt  test_console_sink.cpp
sinks/mqtt/: CMakeLists.txt
sinks/mqtt/cmake/: libipb-sink-mqtt-config.cmake.in
sinks/mqtt/examples/: CMakeLists.txt  basic_mqtt_example.cpp
sinks/mqtt/src/: mqtt_sink.cpp
sinks/sparkplug/: CMakeLists.txt
sinks/sparkplug/src/: sparkplug_encoder.cpp  sparkplug_sink.cpp
sinks/syslog/: CMakeLists.txt
sinks/syslog/cmake/: libipb-sink-syslog-config.cmake.in
sinks/syslog/examples/: basic_syslog_example.cpp
sinks/syslog/src/: syslog_sink.cpp
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  test_e2e_routing.cpp
tests/framework/: ipb_plugin_test.hpp
tests/unit/: CMakeLists.txt  test_backpressure.cpp  test_cached_pattern_matcher.cpp  test_data_point.cpp  test_data_point_new.cpp  test_dataset.cpp  test_debug.cpp  test_endpoint.cpp  test_error.cpp  test_fixed_string.cpp  test_http_transport.cpp  test_lockfree_queue.cpp  test_lockfree_task_queue.cpp  test_memory_config.cpp  test_memory_pool.cpp  test_message_bus.cpp  test_metrics.cpp  test_mqtt_transport.cpp  test_pattern_matcher.cpp  test_platform.cpp  test_rate_limiter.cpp  test_registry.cpp  test_result_ext.cpp  test_router.cpp  test_rule_engine.cpp  test_scheduler.cpp  test_scoop_registry.cpp  test_sink_registry.cpp  test_structured_logger.cpp  test_timestamp.cpp  test_value.cpp
(+159 files in other folders)
